fix phase name italic titles getting cut off on right, add overlap on cards to reduce space needed, add mixins and vars for media queries and card size

--- a/bgio-tutorial/src/components/GetHand/GetHand.scss
+++ b/bgio-tutorial/src/components/GetHand/GetHand.scss
@@ -1,6 +1,12 @@
+@use "../../styles/partials/variables" as *;
+
+
 .card {
-    width: 7rem;
+    width: $card-width;
    
+    &__not-first { // overlaps cards so they take up less space
+        margin-left: -(0.5*$card-width);
+    }
     &--animated {
         top: -20rem;
         position: relative;
