--- a/bgio-tutorial/src/components/Moves/Moves.scss
+++ b/bgio-tutorial/src/components/Moves/Moves.scss
@@ -25,7 +25,10 @@
     
 
     &__container {
-        width: 300px;
+        position: absolute;
+        bottom: 0;
+        left: 75%;
+        // width: 300px;
         overflow:visible;
         white-space:nowrap;
         // background-color: black;
